# agentic-techn0danya

./: README.md
agentic-techn0danya/: .env.example  main.py  pyproject.toml
agentic-techn0danya/agentic_techn0danya/: bot.py  logger.py
prompts/: chat_system_prompt.txt  system_prompt.txt  user_prompt.txt
